--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".MainActivity">
 
 
+    <Button
+        android:id="@+id/moveToButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="화면이동"/>
 </LinearLayout>
