메세지를 보내는화면과/받는화면 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,15 @@
         android:layout_height="wrap_content"
         android:text="화면이동"/>
 
+    <EditText
+        android:id="@+id/messageEdt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="전달할 내용을 입력"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="메세지를 다른화면으로 전달"/>
 
 </LinearLayout>
