--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,5 +75,11 @@
         android:layout_height="wrap_content"
         android:text="전화연결 (DIAL)"/>
 
+    <Button
+        android:id="@+id/callBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="전화연결 (CALL)"/>
+
 
 </LinearLayout>
