--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,5 +81,11 @@
         android:layout_height="wrap_content"
         android:text="전화연결 (CALL)"/>
 
+    <Button
+        android:id="@+id/smsBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="문자전송 화면으로 이동"/>
+
 
 </LinearLayout>
