--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,4 +88,17 @@
         android:text="문자전송 화면으로 이동"/>
 
 
+    <Button
+        android:id="@+id/naverWebBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="네이버 웹 화면으로 이동하기"/>
+
+    <Button
+        android:id="@+id/kakaoStoreBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="카카오톡 앱 다운로드 화면으로"/>
+
+
 </LinearLayout>
